# Zine_CLI

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  zine_imposer_cli.py
packaging/deb/: build-deb.sh  check-deb.sh
packaging/deb/zine-imposer/DEBIAN/: control  postrm
packaging/deb/zine-imposer/usr/lib/zine-imposer/src/zine_imposer/: cli.py
packaging/deb/zine-imposer/usr/share/applications/: zine-imposer.desktop
packaging/linux/: zine-imposer.desktop
src/zine_imposer/: __init__.py
